plugins {
	id 'org.springframework.boot' version '2.1.4.RELEASE'
	id 'java'
}

apply plugin: 'io.spring.dependency-management'

group = 'com.example'
version = '0.0.1'
sourceCompatibility = '1.8'

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter'
	runtimeOnly 'mysql:mysql-connector-java'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	compile('org.springframework.boot:spring-boot-starter-web')
	compile('org.mybatis.spring.boot:mybatis-spring-boot-starter:2.0.1')
    compile('javax.persistence:persistence-api:1.0.2')	
	compile('org.projectlombok:lombok:1.18.4')
	compile('com.alibaba:fastjson:1.2.54')
	compile('com.github.pagehelper:pagehelper-spring-boot-starter:1.2.10')
	compile('tk.mybatis:mapper-spring-boot-starter:2.1.5')
	compile('org.springframework.boot:spring-boot-starter-aop:2.1.4.RELEASE')
	
}
